# movie_prediction

./: LICENSE  README.md  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
research/: trials.ipynb
src/movie_predictor/: __init__.py
src/movie_predictor/utils/: util.py
