#contains information about our project the metadata
[metadata]
license = MIT
license_file = LICENSE
#should run in the python version is 3.10 and it is OS independent
classifier =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
#other 3rd party dependency our project needs and should run python version >=3.7
[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    
#extra options for development and testing #pyetst for
[options.extras_require]
testing =
    pytest>=7.1.3 #run unit test and integration test
    mypy>=1.0.1  #check typing error
    flake8>=6.0.0 #see is there any mistake in project for standard coding
    tox>=4.4.6  #for os independent and test locally
    black>=23.1.0 #formatting

#about package data where is the file
[options.package_data]
#ignore py test error or testing error in the package like while importing scikitlearn if there is testing error then ignore it
movie_predictor = py.typed
  
[flake8]
max-line-length = 160
#exclude __init__.py should be not checked since sometime it is empty.
exclude = __init__.py
